<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/app_bar_share"
        android:enabled="true"
        android:icon="@drawable/ic_share"
        android:title="Share"
        android:visible="true"
        app:showAsAction="always" />
</menu>